--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "toolkit.js",
   "dependencies": {
     "aws-sdk": "^2.357.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "sharp": "^0.21.1",
     "source-map-support": "^0.5.9",
     "uuid": "^3.3.2"
@@ -15,8 +14,10 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "7",
+    "babel-plugin-file-loader": "^1.1.1",
     "babel-plugin-source-map-support": "^2.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.6.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-wyze": "^3.4.0",
+    "file-loader": "^2.0.0",
     "node-loader": "^0.6.0",
     "prettier-eslint": "^8.8.2",
     "rimraf": "^2.6.2",
@@ -46,8 +48,12 @@
     "cleanup": "rimraf lib/",
     "deploy:dev": "sls deploy -v --stage development",
     "build": "npm run cleanup && cross-env NODE_ENV=production webpack --config webpack.config.js --mode development",
-    "lint": "eslint src/toolkit.js"
+    "lint": "eslint src/toolkit.js",
+    "lint": "eslint .",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
+  "target": "node",
   "license": "ISC"
 }
