--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,5 @@
 service: jeremie-asset-service-xoxo
 
-
 custom:
   webpack:
     webpackConfig: ./webpack.config.js
@@ -64,13 +63,13 @@ resources:
 
 functions:
   resize:
-    handler: src/asset.resizeHandler
+    handler: src/functions/resize.andler
     events:
       - s3:
           bucket: ${self:provider.environment.S3_BUCKET}
           event: s3:ObjectCreated:*
   upload:
-    handler: src/asset.uploadHandler
+    handler: src/functions/upload.handler
     events:
       - http:
           path: /asset
@@ -79,7 +78,7 @@ functions:
           summary: "Upload a new asset"
           description: "Upload a new asset"
   metadata:
-    handler: src/asset.metadataHandler
+    handler: src/functions/metadata.handler
     events:
       - http:
           path: /metadata
