--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "source-map-support": "^0.5.9",
     "uuid": "^3.3.2"
   },
+  "engines": {
+    "node": "8.10.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
