--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-wyze": "^3.4.0",
     "file-loader": "^2.0.0",
+    "jest": "^23.6.0",
     "node-loader": "^0.6.0",
     "prettier-eslint": "^8.8.2",
     "rimraf": "^2.6.2",
@@ -50,7 +51,8 @@
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch --mode development",
     "cleanup": "rimraf lib/",
     "deploy:dev": "sls deploy -v --stage development",
-    "build": "yarn run cleanup && cross-env NODE_ENV=production webpack --config webpack.config.js --mode development",
+    "build:dev": "npm run cleanup && cross-env NODE_ENV=production webpack --config webpack.config.js --mode development",
+    "build:prod": "npm run cleanup && cross-env NODE_ENV=production webpack --config webpack.config.js --mode development",
     "lint": "eslint .",
     "test:coverage": "jest --coverage"
   },
