--- a/package.json
+++ b/package.json
@@ -5,24 +5,15 @@
   "main": "toolkit.js",
   "dependencies": {
     "aws-sdk": "^2.357.0",
+    "http-status-codes": "^1.3.0",
     "sharp": "^0.21.1",
-    "source-map-support": "^0.5.9",
     "uuid": "^3.3.2"
   },
   "engines": {
     "node": "8.10.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "7",
-    "babel-plugin-file-loader": "^1.1.1",
-    "babel-plugin-source-map-support": "^2.0.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "aws-sdk-mock": "^4.3.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -38,7 +29,6 @@
     "prettier-eslint": "^8.8.2",
     "rimraf": "^2.6.2",
     "serverless": "^1.34.1",
-    "serverless-aws-documentation": "^1.1.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-step-functions": "https://github.com/ACSchott526/serverless-step-functions#function-regex",
     "serverless-webpack": "^5.2.0",
@@ -47,13 +37,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "test": "jest",
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch --mode development",
     "cleanup": "rimraf lib/",
     "deploy:dev": "sls deploy -v --stage development",
     "build:dev": "npm run cleanup && cross-env NODE_ENV=production webpack --config webpack.config.js --mode development",
     "build:prod": "npm run cleanup && cross-env NODE_ENV=production webpack --config webpack.config.js --mode development",
     "lint": "eslint .",
+    "test": "jest",
     "test:coverage": "jest --coverage"
   },
   "author": "",
